--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .signup-form h2{
     margin-bottom: 10px;
 }
-.css-typing p {
+.css-typing p,h1 {
 	border-right: 0.15em solid black;
 	font-family: "Courier";
 	font-size: 18px;
@@ -29,6 +29,10 @@ body {
 	white-space: nowrap;
 	overflow: hidden;
     margin-bottom: 10px;
+}
+.css-typing h1{
+	font-size: 20px;
+	font-weight: bold;
 }
 .css-typing p:nth-child(1) {
 	width: 17em;
@@ -44,6 +48,14 @@ body {
 	-webkit-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
 }
+.css-typing h1{
+	width: 25em;
+	-webkit-animation: type 3s steps(40, end);
+	animation: type 3s steps(40, end);
+	-webkit-animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
+}
+
 
 .css-typing p:nth-child(2) {
 	width: 11.5em;
@@ -55,15 +67,13 @@ body {
 	-webkit-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
 }
-
-.css-typing p:nth-child(3) {
-	width: 7.3em;
+.css-typing p#telegramUsername{
+	width: 18em;
 	opacity: 0;
-	-webkit-animation: type3 5s steps(20, end),
-		blink 0.5s step-end infinite alternate;
-	animation: type3 5s steps(20, end), blink 0.5s step-end infinite alternate;
-	-webkit-animation-delay: 4s;
-	animation-delay: 4s;
+	-webkit-animation: type2 3s steps(40, end);
+	animation: type2 3s steps(40, end);
+	-webkit-animation-delay: 2s;
+	animation-delay: 2s;
 	-webkit-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
 }
@@ -164,7 +174,7 @@ body {
     border: 1px solid;
     border-radius: 5px;
 }
-#input-container input#submit {
+#input-container input[type = "submit"] {
     color: white;
     padding: 7px 20px;
     border-radius: 5px;
@@ -172,6 +182,10 @@ body {
     transition: all 0.5s;
     background-color: rgb(0, 86, 247);
 }
-#input-container input#submit:hover{
+#input-container input[type = "submit"]:hover{
     background-color: rgb(0, 17, 248);
+}
+.text_blue{
+	color: rgb(0, 86, 247);
+	font-weight: bold;
 }
